<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.stride.tracking</groupId>
    <artifactId>core-service</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>core-service</name>
    <description>core-service</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
        <stride-dto.version>0.0.89-SNAPSHOT</stride-dto.version>
        <stride-common.version>0.0.26-SNAPSHOT</stride-common.version>
        <loki.version>1.6.0</loki.version>
        <mapbox-geojson.version>5.8.0</mapbox-geojson.version>
    </properties>
    <repositories>
        <repository>
            <id>github-dto</id>
            <url>https://maven.pkg.github.com/NLNM-0-0/stride-dto</url>
        </repository>
        <repository>
            <id>github-common</id>
            <url>https://maven.pkg.github.com/NLNM-0-0/stride-common</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>com.stride.tracking</groupId>
            <artifactId>stride-common</artifactId>
            <version>${stride-common.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stride.tracking</groupId>
            <artifactId>core-dto</artifactId>
            <version>${stride-dto.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stride.tracking</groupId>
            <artifactId>profile-dto</artifactId>
            <version>${stride-dto.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stride.tracking</groupId>
            <artifactId>bridge-dto</artifactId>
            <version>${stride-dto.version}</version>
        </dependency>
        <dependency>
            <groupId>com.stride.tracking</groupId>
            <artifactId>route-dto</artifactId>
            <version>${stride-dto.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.github.loki4j</groupId>
            <artifactId>loki-logback-appender</artifactId>
            <version>${loki.version}</version>
        </dependency>

        <dependency>
            <groupId>com.mapbox.mapboxsdk</groupId>
            <artifactId>mapbox-sdk-geojson</artifactId>
            <version>${mapbox-geojson.version}</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
